@@ -16,6 +16,7 @@
 #include <cstdio>
 
 #include <sstream>
+#include <vector>
 #include "app.h"
 #include "image.h"
 
@@ -107,11 +108,29 @@ void App::Run() {
     // Read configuration and theme
     cfg.readConf(CFGFILE);
     string themefile = "";
+    string themedir = "";
     if (testing) {
-        themefile = themefile + testtheme + "/slim.theme";;
+        themedir = themefile + testtheme;
+        themefile = themedir + "/slim.theme";
     } else {
-        themefile = themefile + THEMESDIR + "/"
-            + cfg.getOption("current_theme") + "/slim.theme";
+        string name = cfg.getOption("current_theme");
+        
+        // extract random from theme set
+        string::size_type pos;
+        if ((pos = name.find(",")) != string::npos) {
+            if (name[name.length()-1] == ',') {
+                name = name.substr(0, name.length() - 1);
+            }
+            
+            vector<string> themes;
+            Cfg::split(themes, name, ',');
+            srandom(getpid()+time(NULL));
+            int sel = random() % themes.size();
+            name = Cfg::Trim(themes[sel]);
+        }
+        
+        themedir = themefile + THEMESDIR +"/" + name;
+        themefile = themedir + "/slim.theme";
     }
 
     cfg.readConf(themefile);
@@ -172,7 +191,7 @@ void App::Run() {
     HideCursor();
 
     // Create panel
-    LoginPanel = new Panel(Dpy, Scr, Root, &cfg, testtheme);
+    LoginPanel = new Panel(Dpy, Scr, Root, &cfg, themedir);
 
     // Start looping
     XEvent event;
@@ -183,7 +202,7 @@ void App::Run() {
     while(1) {
         if(panelclosed) {
             // Init root
-            setBackground();
+            setBackground(themedir);
 
             // Close all clients
             if (!testing) {
@@ -351,7 +370,7 @@ void App::Console() {
     int fonty = 15;
     int width = (XWidthOfScreen(ScreenOfDisplay(Dpy, Scr)) - (posx * 2)) / fontx;
     int height = (XHeightOfScreen(ScreenOfDisplay(Dpy, Scr)) - (posy * 2)) / fonty;
-
+    
     // Execute console
     const char* cmd = cfg.getOption("console_cmd").c_str();
     char *tmp = new char[strlen(cmd) + 60];
@@ -607,13 +626,7 @@ void App::StopServer() {
     cerr << endl;
 }
 
-void App::setBackground() {
-    string themedir = "";
-    if (!testing) {
-        themedir = themedir + THEMESDIR + "/" + cfg.getOption("current_theme");
-    } else {
-        themedir = testtheme;
-    }
+void App::setBackground(const string& themedir) {
     string filename;
     filename = themedir + "/background.png";
     Image *image = new Image;
