@@ -1,7 +1,7 @@
 /* SLiM - Simple Login Manager
    Copyright (C) 2004-05 Simone Rota <sip@varlock.com>
    Copyright (C) 2004-05 Johannes Winkelmann <jw@tks6.net>
-      
+
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 2 of the License, or
@@ -33,15 +33,15 @@ public:
     string& getOption(string option);
     string getWelcomeMessage();
     string getLoginCommand(const string& session);
-        
+
     static int absolutepos(const string& position, int max, int width);
     static int string2int(const char* string, bool* ok = 0);
-    
+    static void split(vector<string>& v, const string& str, char c);
+    static string Trim(const string& s);
+
     string nextSession(string current);
 
 private:
-    void split(vector<string>& v, const string& str, char c);
-    string Trim(const string& s);
     map<string,string> options;
     string error;
 
